-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2000-05-21  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version changed to 6:0:1
	* audiofx_ladspa.h (unique_number): added
	* eca-ladspa-plugin-map.h (object, register_object): new
	overloaded versions
	
2000-05-02  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version 5:0:0 frozen
	
2000-04-26  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-chain.h (selected_target): added
	
2000-04-15  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-controller-objects.h (set_default_audio_format): signature
	changed
	* eca-audio-format.h (audio_format): added
	* eca-session.h (get_attached_chains_to_input, _output): renamed 
	from get_connected_chains...()
	* eca-controller-base.h (attached_chains_input, _output): renamed 
	from connected_chains...()
	* eca-audio-objects.h (get_attached_chains...): renamed from 
	get_connected_chains...()
	
2000-04-14  Kai Vehmanen <kaiv@wakkanet.fi>

	* audioio-alsa2-plugin.h: added, contains the class
	ALSA_PCM2_PLUGIN_DEVICE
	* eca-controller.h (direct_command): private function, added 
	
2000-04-03  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-controller-objects.h (set_chainsetup_output_mode): added
	* eca-alsa-dyn.h: removed as obsolete
	* audiofx_vst.h: added
	* eca-vst-plugin-map.h: added
	
2000-03-27  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-static-object-maps (various): changes in map representation, 
	affects all object maps
	
2000-03-24  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-version.h (ecasound_library_version_current): added
	* eca-version.h (ecasound_library_version_revision): added
	* eca-version.h (ecasound_library_version_age): added
	* eca-version.h (ecasound_library_version): added
	* eca-version.h (ecasound_version): removed
	* eca-controller-objects.h (get_audio_format): no longer const
	
2000-03-23  Kai Vehmanen <kaiv@wakkanet.fi>
