@@ -2,6 +2,11 @@
 *** ecasound - changes and additions to libecasound interface       ***
 -----------------------------------------------------------------------
 
+2000-05-29  Kai Vehmanen <kaiv@wakkanet.fi>	
+
+	* audiofx_reverb.h: a new file containing more advanced 
+	reverb effects
+	
 2000-05-21  Kai Vehmanen <kaiv@wakkanet.fi>
 
 	* library version changed to 6:0:1
